Archive2/a0/45cec813d81d9e/output
main.cpp: In function 'void myFunc(T)':
main.cpp:22:44: error: 'string' is not a member of 'std'
     static_assert( is_any_of<T, int, char, std::string>{}, "T not allowed");
                                            ^
main.cpp:22:44: error: 'string' is not a member of 'std'
main.cpp:22:55: error: template argument 4 is invalid
     static_assert( is_any_of<T, int, char, std::string>{}, "T not allowed");
                                                       ^
main.cpp: In instantiation of 'void myFunc(T) [with T = int]':
main.cpp:27:13:   required from here
main.cpp:20:6: warning: unused parameter 'data' [-Wunused-parameter]
 void myFunc(T data)
      ^
main.cpp: In instantiation of 'void myFunc(T) [with T = long unsigned int]':
main.cpp:28:15:   required from here
main.cpp:20:6: warning: unused parameter 'data' [-Wunused-parameter]
